# FibBot

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: trigger.yml
src/: extract_numbers.rs  extract_nums.rs  fibbonacci_calculator.rs  get_input_on_github.rs  get_pull_request.rs  main.rs  push_comment.rs
