[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
await = "0.0.0"
gh-workflow = "0.5.10"
octocrab = "0.43.0"
regex = "1.11.1"
reqwest = "0.12.12"
serde = {version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = {version = "1.43.0", features = ["full"]}

